# cloudshuttle-shared

./: .gitignore  CRATES_OVERVIEW.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  USAGE_GUIDE.md  release_notes.txt
.github/workflows/: publish.yml  security.yml  test.yml
docs/: contributing.md  private-distribution-decision.md  publishing-strategy.md  rust-libraries.md  typescript-libraries.md  versioning.md
docs/api-contracts/: README.md
docs/api-contracts/authentication/: openapi.yaml
docs/api-contracts/database/: openapi.yaml
docs/api-contracts/observability/: openapi.yaml
docs/api-contracts/validation/: openapi.yaml
docs/consumption/: Cargo.toml.template  QUICK_REFERENCE.md  README.md
docs/consumption/examples/: auth_service.rs
docs/design/: API_DOCUMENTATION_DESIGN.md  API_MIDDLEWARE_DESIGN.md  API_PAGINATION_DESIGN.md  API_RESPONSE_FORMATTING_DESIGN.md  API_UTILITIES_DESIGN.md
docs/designs/: database_types_refactor.md
docs/pilot-project/: README.md  auth-patterns-applied.md
docs/remediation/: API_CONTRACTS_ASSESSMENT.md  CRITICAL_ENGINEER_ASSESSMENT.md  JWT_MODULE_BREAKDOWN.md  MASTER_REMEDIATION_PLAN.md  METRICS_MODULE_BREAKDOWN.md  PHASE1_ADVANCED_AUTH_FEATURES.md  PHASE1_FILE_SIZE_BREAKDOWN.md  PHASE1_WEEK2_COMPLETED.md  PHASE1_WEEK3_COMPLETED.md  PHASE1_WORKSPACE_DEPS.md  PHASE2_WEEK4_COMPLETED.md  PHASE3_COVERAGE_REPORT.md  PHASE3_QUALITY_ASSURANCE.md  SECURITY_MODULE_BREAKDOWN.md  TEST_COVERAGE_ASSESSMENT.md
docs/shared-repo-improvements/: 01_dependency-modernization.md  02_api-consistency-fixes.md  05_auth-component-enhancement.md  10_testing-quality-assurance.md  12_adoption-migration-guide.md  README.md
rust/: Cargo.toml
rust/api/: Cargo.toml  README.md
rust/api/src/: lib.rs
rust/auth/: Cargo.toml  README.md
rust/auth/src/: claims.rs  jwt.rs  lib.rs  password.rs
rust/config/: Cargo.toml  README.md
rust/config/src/: lib.rs
rust/crates/api/: Cargo.toml
rust/crates/api/src/: cors.rs  docs.rs  error.rs  lib.rs  pagination.rs  rate_limit.rs  request_tracing.rs  response.rs  service.rs  tracing.rs  validation.rs
rust/crates/api/tests/: integration_tests.rs
rust/crates/auth/: Cargo.toml
rust/crates/auth/benches/: auth_benchmarks.rs  jwt_benchmarks.rs
rust/crates/auth/src/: claims.rs  introspection.rs  jwt.rs  keys.rs  lib.rs  middleware.rs  pkce.rs  refresh.rs  refresh_tokens.rs  security.rs  types.rs
rust/crates/auth/src/jwt/: claims_management.rs  key_management.rs  token_operations.rs
rust/crates/auth/src/middleware/: extractors.rs  guards.rs  layers.rs  mod.rs
rust/crates/auth/src/refresh_tokens/: manager.rs  mod.rs  types.rs
rust/crates/auth/src/security/: encryption.rs  input_sanitization.rs  password_policy.rs  rate_limiting.rs
rust/crates/auth/src/types/: credentials.rs  errors.rs  mod.rs  policy.rs  session.rs
rust/crates/auth/tests/: contract_tests.rs  integration_tests.rs  service_integration_tests.rs
rust/crates/config/: Cargo.toml
rust/crates/config/src/: hot_reload.rs  lib.rs  loader.rs  secrets.rs  validator.rs
rust/crates/crypto/: Cargo.toml
rust/crates/crypto/src/: encryption.rs  hashing.rs  lib.rs  random.rs
rust/crates/database/: Cargo.toml
rust/crates/database/src/: connection.rs  lib.rs  migrations.rs  pool.rs  query.rs  transaction.rs  types.rs
rust/crates/database/src/migrations/: advanced_migrations.rs
rust/crates/database/src/migrations/advanced/: builder.rs  mod.rs  runner.rs  types.rs
rust/crates/database/src/pool/: advanced_pool.rs
rust/crates/database/src/pool/advanced/: manager.rs  mod.rs  pool.rs  types.rs
rust/crates/database/src/query/: batch.rs  builder.rs  filters.rs  mod.rs  options.rs  results.rs
rust/crates/database/src/types/: entities.rs  migrations.rs  mod.rs  models.rs  traits.rs
rust/crates/database/tests/: integration_tests.rs  user_management_integration.rs
rust/crates/error-handling/: Cargo.toml
rust/crates/error-handling/src/: api_error.rs  database_error.rs  error.rs  lib.rs  service_error.rs
rust/crates/observability/: Cargo.toml
rust/crates/observability/src/: audit.rs  health.rs  lib.rs  logging.rs  metrics.rs  middleware.rs  tracing.rs
rust/crates/observability/src/metrics/: metrics_collection.rs  metrics_middleware.rs  metrics_recording.rs
rust/crates/validation/: Cargo.toml
rust/crates/validation/benches/: sanitization.rs  validation_benchmarks.rs
rust/crates/validation/proptest-regressions/: sanitization.txt
rust/crates/validation/src/: advanced_validation.rs  lib.rs  rules.rs  sanitization.rs
rust/crates/validation/src/validation/: mod.rs  sanitizers.rs  types.rs  validator.rs
rust/crypto/: Cargo.toml  README.md
rust/crypto/src/: lib.rs
rust/database/: Cargo.toml  README.md
rust/database/src/: connection.rs  lib.rs  migrations.rs  pool.rs  query.rs  transaction.rs  types.rs
rust/error-handling/: Cargo.toml  README.md
rust/error-handling/src/: api_error.rs  database_error.rs  error.rs  lib.rs  macros.rs  service_error.rs
rust/observability/: Cargo.toml  README.md
rust/observability/src/: lib.rs
rust/validation/: Cargo.toml  README.md
rust/validation/src/: lib.rs
scripts/: build-all.sh  check_compilation.sh  create_release.sh  direct_compilation_check.sh  minimal_check.sh  release.sh  setup.sh  test-all.sh  test_compilation.sh  validate_contracts.sh
typescript/: package.json
typescript/api/: package.json
typescript/api/src/: client.ts  errorHandler.ts  index.ts  interceptors.ts  types.ts
typescript/components/: package.json
typescript/components/Button/: Button.tsx
typescript/components/Form/: Form.tsx
typescript/components/Input/: Input.tsx
typescript/components/Layout/: Layout.tsx
typescript/components/Modal/: Modal.tsx
typescript/components/Table/: Table.tsx
typescript/components/src/: index.ts
typescript/hooks/: package.json
typescript/hooks/src/: index.ts  useApi.ts  useAuth.ts  useDebounce.ts  useForm.ts  useLocalStorage.ts  usePagination.ts
typescript/stores/: package.json
typescript/types/: package.json
typescript/utils/: package.json
(+14 files in other folders)
