[workspace]
members = [
    "rust/crates/error-handling",
    "rust/crates/database",
    "rust/crates/auth",
    "rust/crates/observability",
    "rust/crates/config",
    "rust/crates/api",
    "rust/crates/validation",
    "rust/crates/crypto",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
rust-version = "1.89"
license = "MIT OR Apache-2.0"
authors = ["CloudShuttle Team"]
repository = "https://github.com/cloudshuttle/cloudshuttle-shared"
documentation = "https://docs.rs/cloudshuttle-shared"

[workspace.dependencies]
# Common dependencies shared across workspace
async-trait = "0.1.89"
thiserror = "2.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["full"] }
uuid = { version = "1.16", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.20.0", features = ["derive"] }
regex = "1.10"
unicode-normalization = "0.1"

# Database
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid", "json"] }

# Authentication
jsonwebtoken = { version = "10.0", features = ["rust_crypto"] }
bcrypt = "0.15"
rand = "0.8"
base64 = "0.22"
ring = "0.17"

# Web framework
axum = "0.7.9"
tower = "0.5"
hyper = "1.4"
http = "1.2"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
prometheus = "0.13"
lazy_static = "1.4"
once_cell = "1.20"
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
sys-info = "0.9"

[profile.release]
opt-level = 3
debug = false
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = 2
overflow-checks = true
