[workspace]
resolver = "2"
members = [
    "crates/error-handling",
    "crates/database",
    "crates/auth",
    "crates/observability",
    "crates/config",
    "crates/api",
    "crates/validation",
    "crates/crypto"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["CloudShuttle Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/cloudshuttle/cloudshuttle-shared"

[workspace.dependencies]
# Common dependencies shared across crates
tokio = { version = "1.47", features = ["rt-multi-thread", "macros", "test-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "json"] }
http = "1.0"
validator = { version = "0.20", features = ["derive"] }
prometheus = "0.14"
lazy_static = "1.4"
bcrypt = "0.15"
rand = "0.8"
once_cell = "1.0"
hyper = { version = "1.0", features = ["http1", "server"] }
hex = "0.4"
ring = "0.17"
axum = "0.8"
sys-info = "0.9"
unicode-normalization = "0.1"


