[package]
name = "cloudshuttle-api"
version = "0.1.0"
edition = "2021"
description = "api utilities for CloudShuttle services"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cloudshuttle/cloudshuttle-shared"
documentation = "https://docs.rs/cloudshuttle-api"
readme = "README.md"

[dependencies]
cloudshuttle-error-handling = { path = "../error-handling", version = "0.1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
