[package]
name = "cloudshuttle-auth"
version = "0.1.0"
edition = "2021"
description = "Authentication utilities and JWT handling for CloudShuttle services"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cloudshuttle/cloudshuttle-shared"
documentation = "https://docs.rs/cloudshuttle-auth"
readme = "README.md"

[dependencies]
cloudshuttle-error-handling = { path = "../error-handling", version = "0.1.0" }
jsonwebtoken = "9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
bcrypt = "0.15"
rand = "0.8"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
