[package]
name = "cloudshuttle-error-handling"
version = "0.1.0"
edition = "2021"
description = "Standardized error types and handling for CloudShuttle services"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cloudshuttle/cloudshuttle-shared"
documentation = "https://docs.rs/cloudshuttle-error-handling"
readme = "README.md"

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http = "0.2"
validator = { version = "0.16", features = ["derive"] }

# Optional dependencies
sqlx = { version = "0.7", optional = true, features = ["postgres", "runtime-tokio-rustls"] }

[features]
default = []
sqlx = ["dep:sqlx"]

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
