[package]
name = "cloudshuttle-observability"
version = "0.1.0"
edition = "2021"
description = "Observability utilities for CloudShuttle services"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cloudshuttle/cloudshuttle-shared"
documentation = "https://docs.rs/cloudshuttle-observability"
readme = "README.md"

[dependencies]
cloudshuttle-error-handling = { path = "../error-handling", version = "0.1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
prometheus = "0.13"
lazy_static = "1.4"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
