[package]
name = "cloudshuttle-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "API utilities and response formatting for CloudShuttle services"
keywords = ["api", "http", "response", "pagination"]
categories = ["web-programming", "api-bindings"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
http.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
