[package]
name = "cloudshuttle-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "API utilities and response formatting for CloudShuttle services"
keywords = ["api", "http", "response", "pagination"]
categories = ["web-programming", "api-bindings"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
http.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
cloudshuttle-auth = { path = "../auth" }
utoipa = { version = "4.2", features = ["axum_extras", "chrono"] }
utoipa-axum = { version = "0.1" }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "test-util"] }
tower = "0.5"
http-body-util = "0.1"
