[package]
name = "cloudshuttle-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Authentication and JWT utilities for CloudShuttle services"
keywords = ["auth", "jwt", "authentication", "security"]
categories = ["authentication", "web-programming"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
async-trait.workspace = true
jsonwebtoken = "9.0"
base64.workspace = true
ring = "0.17"
axum = { workspace = true, optional = true }

[features]
default = []
middleware = ["axum"]
