[package]
name = "cloudshuttle-crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Cryptographic utilities for CloudShuttle services"
keywords = ["crypto", "encryption", "hashing", "security"]
categories = ["cryptography", "authentication"]

[dependencies]
serde.workspace = true
base64.workspace = true
ring.workspace = true
argon2 = "0.5"
aes-gcm = "0.10"
rand.workspace = true
thiserror.workspace = true
