[package]
name = "cloudshuttle-database"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Database utilities and connection management for CloudShuttle services"
keywords = ["database", "postgres", "connection", "pool"]
categories = ["database", "web-programming"]

[dependencies]
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
async-trait.workspace = true
thiserror.workspace = true
