[package]
name = "cloudshuttle-observability"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Observability utilities for CloudShuttle services (logging, metrics, tracing)"
keywords = ["observability", "logging", "metrics", "tracing", "monitoring"]
categories = ["development-tools", "asynchronous"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
prometheus = "0.13"
once_cell.workspace = true
async-trait.workspace = true
hyper = { version = "1.0", features = ["http1", "server"] }
http = "1.0"
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
hex = "0.4"
rand.workspace = true
reqwest = { workspace = true, optional = true }
sys-info = { workspace = true, optional = true }

[features]
default = []
axum = ["dep:axum", "dep:reqwest"]
sys-info = ["dep:sys-info"]

[dependencies.axum]
version = "0.2.0"
optional = true
features = ["macros"]
