[package]
name = "cloudshuttle-validation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Input validation and sanitization for CloudShuttle services"
keywords = ["validation", "sanitization", "input", "security"]
categories = ["encoding", "api-bindings"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
validator = { version = "0.18", features = ["derive"] }
thiserror.workspace = true
once_cell.workspace = true
unicode-normalization = "0.1"

[dev-dependencies]
proptest = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
